--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,10 +1,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "posts.scss";
-
+@import "gritter";
 
 
 
 .custom-nav {
-  margin-top: 15px;
+  margin-top: 20px;
 }
