--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,18 +18,7 @@
   <%= f.text_area :rationale ,class: 'form-control' %>
   </div>
 
-  <div class="form-group">
-  <%= f.radio_button :status ,'submitted' %>
-  <%= f.label :status,'submitted' %>
-  
-  <%= f.radio_button :status ,'approved' %>
-  <%= f.label :status, 'approved' %>
- 
-  <%= f.radio_button :status ,class: 'rejected' %>
-  <%= f.label :status,'rejected' %>
- 
-
-  </div>
+  <%= render partial: 'status', locals: {f: f} if current_user.type == 'AdminUser' %>
 
   
   <%= f.submit 'Save' ,class: 'btn btn-primary btn-block'%>
