--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,6 +2,7 @@
   <h1>Time Tracker</h1>
 </div>
 
+<% if current_user %>
 <ul class="nav nav-tabs custom-nav">
   <li class="<%= active?(root_path)%>">
     <%= link_to 'Home', root_path%>
@@ -16,10 +17,12 @@
   <li class="dropdown pull-right">
      <a href="#" data-toggle="dropdown" class="dropdown-toggle">Account<strong class="caret"></strong></a>
     <ul class="dropdown-menu">
+    <% if current_user.try(:type) == 'AdminUser' %>
       <li>
-        <%= link_to 'Admin dashboard todo',root_path%>
+        <%= link_to 'Admin Dashboard',admin_root_path%>
       </li>
       <li class="divider">
+    <% end %>
       </li>
       <li>
         <%= link_to 'Logout',destroy_user_session_path,method: :delete %>
@@ -27,3 +30,4 @@
     </ul>
   </li>
 </ul>
+<%end%>
