created partial for full coverage growl notification

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   </div>
   </div>
 
+<%= render 'shared/alert' %>
 
-  <%= js add_gritter(flash[:notice],title: "Overtime App Notification",sticky: false ,image: :notice) %>
   </body>
 </html>
