implemented ability to block user after approving post + add status column

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,15 +7,16 @@
           #
         </th>
         <th>
-          Date
+        Date
         </th>
         <th>
-          User
+        User
         </th>
         <th>
-          Rational
+        Rational
         </th>
         <th>
+        Status
         </th>
       </tr>
     </thead>
