--- a/app/views/audit_logs/_audit_log.html.erb
+++ b/app/views/audit_logs/_audit_log.html.erb
@@ -1,1 +1,17 @@
-<%= @audit_logs.user.full_name %>
+<tr>
+  <td>
+    <%= audit_log.id%>
+  </td>
+  <td>
+    <%= audit_log.user.full_name%>
+  </td>
+  <td>
+    <%= audit_log.strat_date%>
+  </td>
+  <td>
+    <%= audit_log.end_date%>
+  </td>
+  <td>
+    <%= audit_log.status%>
+  </td>
+</tr>
