--- a/app/views/audit_logs/_audit_log.html.erb
+++ b/app/views/audit_logs/_audit_log.html.erb
@@ -12,6 +12,6 @@
     <%= audit_log.end_date%>
   </td>
   <td>
-    <%= audit_log.status%>
+    <%= status_span_generator audit_log.status%>
   </td>
 </tr>
