--- a/app/views/static/_admin.html.erb
+++ b/app/views/static/_admin.html.erb
@@ -1,24 +1,16 @@
 <div class="container-fluid">
   <div class="pending-homepage row">
-  <div class="homepage-block col-md-3">
-   <p>asdf</p>
+  <h2>Item Pending Your Approval</h2>
+  <hr>
+<%= render partial: 'pending_approval',locals: {pending_approvals: @pending_approvals} %>
   </div>
-  <div class="homepage-block col-md-3">
-   <p>asdf</p>
-  </div>
-  <div class="homepage-block col-md-3">
-   <p>asdf</p>
-  </div>
-  <div class="homepage-block col-md-3">
-   <p>asdf</p>
-  </div>
-  
-</div>
 
 
-<div class="pending-homepage">
-  <div>
-    asdf
+
+  <div class="pending-homepage">
+    <div>
+      asdf
+    </div>
   </div>
-</div>
+
 </div>
