--- a/app/views/static/_admin.html.erb
+++ b/app/views/static/_admin.html.erb
@@ -2,15 +2,19 @@
   <div class="pending-homepage row">
   <h2>Item Pending Your Approval</h2>
   <hr>
-<%= render partial: 'pending_approval',locals: {pending_approvals: @pending_approvals} %>
+    <%= render partial: 'pending_approval',locals: {pending_approvals: @pending_approvals} %>
   </div>
 
 
+  <div class="pending-homepage row">
+  <h2>Confirmation Log</h2>
+  <hr>
+    <%= render partial: 'confirmation_log',locals: {pending_approvals: @recent_audit_items} %>
+    <hr>
+    <div class="clearfix"></div>
+    
+    <%= link_to 'View All Items',audit_logs_path,class: 'btn btn-primary' %>
 
-  <div class="pending-homepage">
-    <div>
-      asdf
-    </div>
   </div>
-
+ 
 </div>
