--- a/app/views/static/_admin.html.erb
+++ b/app/views/static/_admin.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="pending-homepage row">
-  <h2>Item Pending Your Approval</h2>
+  <h2>Items Pending Your Approval</h2>
   <hr>
     <%= render partial: 'pending_approval',locals: {pending_approvals: @pending_approvals} %>
   </div>
@@ -12,7 +12,7 @@
     <%= render partial: 'confirmation_log',locals: {pending_approvals: @recent_audit_items} %>
     <hr>
     <div class="clearfix"></div>
-    
+
     <%= link_to 'View All Items',audit_logs_path,class: 'btn btn-primary' %>
 
   </div>
