--- a/app/views/static/_employee.html.erb
+++ b/app/views/static/_employee.html.erb
@@ -1,1 +1,6 @@
-<h1>Hi Employee</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4 column jumbotron employee-block">asdf</div>
+    <div class="col-md-4 column jumbotron employee-block">asdf</div>
+  </div>
+</div>
