--- a/app/views/static/_employee.html.erb
+++ b/app/views/static/_employee.html.erb
@@ -1,6 +1,12 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-4 column jumbotron employee-block">asdf</div>
-    <div class="col-md-4 column jumbotron employee-block">asdf</div>
+
+    <div class="pending-homepage  employee-block">
+      <h3>Pending Your Confirmation</h3>
+      <%= render partial: 'pending_audit_confirmations',locals: {pending_audit_confirmations: @pending_audit_confirmations} %>
+    </div>
+
+    <div class="col-md-5 column pending-homepage  employee-block">asdf</div>
+
   </div>
 </div>
