--- a/app/views/static/_employee.html.erb
+++ b/app/views/static/_employee.html.erb
@@ -1,12 +1,16 @@
 <div class="container-fluid">
   <div class="row">
-
+  <% if @pending_audit_confirmations.any? %>
     <div class="pending-homepage  employee-block">
       <h3>Pending Your Confirmation</h3>
       <%= render partial: 'pending_audit_confirmations',locals: {pending_audit_confirmations: @pending_audit_confirmations} %>
     </div>
+  <%end%>
 
-    <div class="col-md-5 column pending-homepage  employee-block">asdf</div>
+    <div class="pending-homepage  employee-block">
+    <h3>Request Overtime</h3>
+      <%= link_to 'request Overtime Approval',new_post_path,class: 'btn btn-primary btn-block btn-lg' %>
+    </div>
 
   </div>
 </div>
