integrated callback for rejections

--- a/app/views/posts/_status.html.erb
+++ b/app/views/posts/_status.html.erb
@@ -5,7 +5,7 @@
       <%= f.radio_button :status ,'approved' %>
       <%= f.label :status, 'approved' %>
      
-      <%= f.radio_button :status ,class: 'rejected' %>
+      <%= f.radio_button :status ,'rejected' %>
       <%= f.label :status,'rejected' %>
      
   </div>
